--- a/src/views/404.html
+++ b/src/views/404.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Product</title>
+    <title>Page not found</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="/">Shop</a></li>
-                <li><a href="/add-product">Add Product</a></li>
+                <li><a href="/admin/add-product">Add Product</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <form action="/add-product" method="POST">
-            <input type="text" name="title" />
-            <button type="submit">Add Product</button>
-        </form>
+        <h1>Sorry, the page you were looking for was not found</h1>
+        <h2>Error 404...</h2>
+        <p>Please click on one of the navigation bar links above and continue</p>
     </main>
 </body>
 </html>
