--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -1,9 +1,9 @@
-<%- include('includes/head.ejs') %> 
+<%- include('../includes/head.ejs') %> 
     <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
-    <%- include('includes/nav.ejs') %> 
+    <%- include('../includes/nav.ejs') %> 
 
     <main>
         <% if(prods.length > 0 ){ %>
@@ -30,4 +30,4 @@
             <h1>Sorry, no books here...</h1>
         <% } %> 
     </main>
-<%- include('includes/end.ejs') %> 
+<%- include('../includes/end.ejs') %> 
