--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -14,14 +14,16 @@
                             <h1 class="product__title"><%= product.title %></h1>
                         </header>
                         <div class="card__image">
-                            <img src="https://www.publicbooks.org/wp-content/uploads/2017/01/book-e1484158615982.jpg" alt="A book">
+                            <img src="<%= product.imgUrl %>" alt="A book">
                         </div>
                         <div class="card__content">
-                            <h2 class="product__price">$19.99</h2>
-                            <p class="product__description">A very interesting book about so many amazing stories.</p>
+                            <h2 class="product__price">$<%= product.price %></h2>
+                            <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
-                            <button class="btn">Add to cart</button>
+                            <form action="/add-to-cart" method="POST">
+                                <button class="btn">Add to cart</button>
+                            </form>
                         </div>
                     </article>
                 <% } %> 
