--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,13 +1,8 @@
-<%- include('includes/head.ejs') %> 
-
+<%- include('includes/head.ejs') %>
 </head>
 
 <body>
-    <%- include('includes/nav.ejs') %> 
+    <%- include('includes/navigation.ejs') %>
+    <h1>Page Not Found!</h1>
 
-    <main>
-        <h1>Sorry, the page you were looking for was not found</h1>
-        <h2>Error 404...</h2>
-        <p>Please click on one of the navigation bar links above and continue</p>
-    </main>
-<%- include('includes/end.ejs') %> 
+<%- include('includes/end.ejs') %>
