--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,11 +1,11 @@
-<%- include('../includes/head.ejs') %> 
-
+<%- include('../includes/head.ejs') %>
 </head>
 
 <body>
-    <%- include('../includes/nav.ejs') %> 
+    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <h1><%= pageTitle %></h1>
+        <h1><%= product.title %></h1>
     </main>
-<%- include('../includes/end.ejs') %> 
+
+<%- include('../includes/end.ejs') %>
