--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -1,11 +1,20 @@
-<%- include('../includes/head.ejs') %> 
-
+<%- include('../includes/head.ejs') %>
 </head>
 
 <body>
-    <%- include('../includes/nav.ejs') %> 
+    <%- include('../includes/navigation.ejs') %>
 
-    <main>
-        <h1><%= pageTitle %></h1>
+    <main class="centered">
+        <h1><%= product.title %> </h1>
+        <hr/>
+        <div class="card__image">
+            <img src="<%= product.imgUrl %> " alt="<%= product.title %> " />
+        </div>
+        <h2><%= product.price %></h2>
+        <p><%= product.description %></p>
+        <form>
+            <button class="btn" type="submit">Add to cart</button>
+        </form>
     </main>
-<%- include('../includes/end.ejs') %> 
+
+<%- include('../includes/end.ejs') %>
