--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -8,13 +8,11 @@
         <h1><%= product.title %> </h1>
         <hr/>
         <div class="card__image">
-            <img src="<%= product.imgUrl %> " alt="<%= product.title %> " />
+            <img src="<%= product.imgUrl %>" alt="<%= product.title %>" />
         </div>
         <h2><%= product.price %></h2>
         <p><%= product.description %></p>
-        <form>
-            <button class="btn" type="submit">Add to cart</button>
-        </form>
+        <%- include('../includes/add-to-cart.ejs') %>
     </main>
 
 <%- include('../includes/end.ejs') %>
